--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-p {
-  text-align: left;
-  margin: 30px 0;
-}
 
 @keyframes sticky-parallax-header-move-and-size {
   from {
@@ -33,32 +29,28 @@ p {
   animation-range: 0vh 95vh;
 }
 
-body {
-  padding-top: 100vh;
-}
 
+.gallery-wrapper {
+  perspective: 1000px;
+}
 @keyframes animate-in-and-out {
 	entry 0%  {
-		opacity: 0; 
-    scale: 0;
-    transform: translateY(100%);
-    filter: brightness(3.2);
+    transform: translateY(100%) rotateX(90deg);
+    filter: brightness(3.2) blur(1px) saturate(0);
 	}
 	entry 100%  {
-		opacity: 1; 
-    scale: 1;
-    transform: translateY(0);
-    filter: brightness(1);
+    transform: translateY(0) rotateX(0deg);
+    filter: brightness(1) blur(0) saturate(1);
 	}
 }
 
 .gallery-images {
-  --start: calc(var(--index) * 10%);
+  --start: calc(var(--index) * 10px);
 	animation: animate-in-and-out linear both;
-	animation-timeline: view();
-  animation-range-start: entry var(--start);
-  animation-range-end: cover 100%;
-  border-radius: calc(var(--index) * 10%);
+	animation-timeline: scroll();
+  animation-range: 0vh 90vh;
+  border-radius: 8px;
+  
 }
 
 @layer warning {
