--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,46 @@ html {
         }
     }
 }
+
+.banner {
+    width: 100%;
+    height: 900px;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+}
+.banner .slider {
+    position: absolute;
+    width: 200px;
+    height: 250px;
+    top: 10%;
+    left: calc(50% - 100px);
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+    animation: autoRun 20s linear infinite;
+    z-index: 2;
+}
+@keyframes autoRun {
+    from {
+        transform: perspective(1000px) rotateX(-16deg) rotateY(0deg);
+    }
+    to {
+        transform: perspective(1000px) rotateX(-16deg) rotateY(360deg);
+    }
+}
+
+.banner .slider .item {
+    position: absolute;
+    inset: 0 0 0 0;
+    transform: rotateY(
+            calc((var(--index) - 1) * (360 / var(--quantity)) * 1deg)
+        )
+        translateZ(550px);
+}
+.banner .slider .item img {
+    width: 100px;
+    height: 100px;
+    max-width: 100px;
+    max-width: 100px;
+    object-fit: cover;
+}
