--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ html {
     overflow: hidden;
     position: relative;
 }
+
 .banner .slider {
     position: absolute;
     width: 200px;
@@ -139,30 +140,80 @@ html {
     left: calc(50% - 100px);
     transform-style: preserve-3d;
     transform: perspective(1000px);
-    animation: autoRun 20s linear infinite;
+    animation: autoRun 80s linear infinite;
     z-index: 2;
 }
+
 @keyframes autoRun {
     from {
-        transform: perspective(1000px) rotateX(-16deg) rotateY(0deg);
+        transform: perspective(2000px) rotateX(-5deg) rotateY(0deg);
     }
     to {
-        transform: perspective(1000px) rotateX(-16deg) rotateY(360deg);
+        transform: perspective(2000px) rotateX(-5deg) rotateY(360deg);
+    }
+}
+
+@keyframes autoOpacity {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
 
 .banner .slider .item {
     position: absolute;
+    top: 0;
     inset: 0 0 0 0;
     transform: rotateY(
             calc((var(--index) - 1) * (360 / var(--quantity)) * 1deg)
         )
         translateZ(550px);
+    width: 150px;
+    height: 300px;
+    object-fit: contain;
+    animation: autoOpacity 4s forwards infinite;
+    /* animation-delay: calc(var(--index) * 1s); */
 }
+
 .banner .slider .item img {
     width: 100px;
     height: 100px;
     max-width: 100px;
     max-width: 100px;
     object-fit: cover;
+}
+
+@keyframes autoRunReverse {
+    from {
+        transform: perspective(2000px) rotateY(0deg);
+    }
+    to {
+        transform: perspective(2000px) rotateY(360deg);
+    }
+}
+
+.banner .slider .gradient {
+    width: 500px;
+    height: 300px;
+    right: calc(50% - 100px);
+    transform-style: preserve-3d;
+    transform: perspective(2000px);
+    animation: autoRunReverse 90s linear infinite;
+    animation-direction: reverse;
+    background: linear-gradient(
+        90deg,
+        rgba(23, 23, 23, 0) 0%,
+        rgba(23, 23, 23, 1) 20%,
+        rgba(23, 23, 23, 1) 50%,
+        rgba(23, 23, 23, 1) 82%,
+        rgba(23, 23, 23, 0) 100%
+    );
 }
