--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@ html {
     from {
         transform: scaleX(0);
     }
+
     to {
         transform: scaleX(1);
     }
@@ -140,16 +141,17 @@ html {
     left: calc(50% - 100px);
     transform-style: preserve-3d;
     transform: perspective(1000px);
-    animation: autoRun 80s linear infinite;
+    animation: autoRun 100s linear infinite;
     z-index: 2;
 }
 
 @keyframes autoRun {
     from {
-        transform: perspective(2000px) rotateX(-5deg) rotateY(0deg);
+        transform: perspective(2000px) rotateX(0deg) rotateY(0deg);
     }
+
     to {
-        transform: perspective(2000px) rotateX(-5deg) rotateY(360deg);
+        transform: perspective(2000px) rotateX(0deg) rotateY(360deg);
     }
 }
 
@@ -157,12 +159,15 @@ html {
     0% {
         opacity: 0;
     }
+
     20% {
         opacity: 1;
     }
+
     80% {
         opacity: 1;
     }
+
     100% {
         opacity: 0;
     }
@@ -170,7 +175,6 @@ html {
 
 .banner .slider .item {
     position: absolute;
-    top: 0;
     inset: 0 0 0 0;
     transform: rotateY(
             calc((var(--index) - 1) * (360 / var(--quantity)) * 1deg)
@@ -179,7 +183,8 @@ html {
     width: 150px;
     height: 300px;
     object-fit: contain;
-    animation: autoOpacity 4s forwards infinite;
+    opacity: 1;
+    /* animation: autoOpacity 2s forwards infinite; */
     /* animation-delay: calc(var(--index) * 1s); */
 }
 
@@ -193,27 +198,39 @@ html {
 
 @keyframes autoRunReverse {
     from {
-        transform: perspective(2000px) rotateY(0deg);
+        transform: rotateY(360deg) translateZ(450px);
     }
+
     to {
-        transform: perspective(2000px) rotateY(360deg);
+        transform: rotateY(0deg) translateZ(450px);
     }
 }
 
 .banner .slider .gradient {
-    width: 500px;
-    height: 300px;
-    right: calc(50% - 100px);
+    position: absolute;
+    width: 1000px;
+    height: 500px;
+    top: calc(50% - 220px);
+    right: calc(50% - 500px);
     transform-style: preserve-3d;
-    transform: perspective(2000px);
-    animation: autoRunReverse 90s linear infinite;
-    animation-direction: reverse;
+    transform: perspective(2000px) rotateZ(-90deg) translateZ(500px);
+    animation: autoRunReverse 100s linear infinite;
+    background-color: rgba(23, 23, 23, 1);
+}
+
+.gradient2 {
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     background: linear-gradient(
         90deg,
-        rgba(23, 23, 23, 0) 0%,
-        rgba(23, 23, 23, 1) 20%,
-        rgba(23, 23, 23, 1) 50%,
-        rgba(23, 23, 23, 1) 82%,
-        rgba(23, 23, 23, 0) 100%
+        rgba(23, 23, 23, 1) 10%,
+        rgba(23, 23, 23, 0) 20%,
+        rgba(23, 23, 23, 0) 50%,
+        rgba(23, 23, 23, 0) 80%,
+        rgba(23, 23, 23, 1) 90%
     );
 }
